Улучшил примечание на странице таблицы Т6МХ.

--- a/src/main/resources/templates/indicators/tables/walk-test-table.html
+++ b/src/main/resources/templates/indicators/tables/walk-test-table.html
@@ -52,9 +52,11 @@
                 <div class="col-12">
                     <h4 class="fs-5">Примечание</h4>
                     <div class="fs-6">
-                        В записи результатов вида
-                        <span class="fw-semibold">N → M</span>
-                        число слева от стрелки означает результат до физической нагрузки, а число справа от стрелки - соответственно после
+                        Запись результатов с символом
+                        <span class="fw-semibold">"→"</span>
+                        означает
+                        <span class="fw-semibold">"Показатель до нагрузки → Показатель после нагрузки"</span>
+                        . Например, если до нагрузки верхнее давление пациента составляло 120 (мм рт.ст.), а после нагрузки оно составило 180 (мм рт.ст.), то это будет отображено как <span class="fw-semibold">"120 → 180"</span>.
                     </div>
                 </div>
             </div>
