--- a/src/main/resources/templates/indicators/graphics/spirometry-graphic.html
+++ b/src/main/resources/templates/indicators/graphics/spirometry-graphic.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title th:if="${isSelf}">Динамика вашей спирометрии</title>
-        <title th:if="${!isSelf}" th:text="'Динамика спирометрии пациента &laquo;' + ${patient.userInformation.fullName} + '&raquo;'">Динамика давления пациента "Иванов Степан Петрович"</title>
+        <title th:if="${!isSelf}" th:text="'Динамика спирометрии пациента &laquo;' + ${patient.userInformation.fullName} + '&raquo;'">Динамика спирометрии пациента "Иванов Степан Петрович"</title>
         <link href="../../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
         <link href="../../../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
         <link rel="apple-touch-icon" sizes="180x180" href="../../../static/favicon/apple-touch-icon.png" th:href="@{/favicon/apple-touch-icon.png}" />
@@ -19,23 +19,37 @@
         <!---->
         <div class="container text-secondary my-5">
             <!---->
-            <div class="row fs-5 mb-5" th:attr="data-patient=${patient.id}">
-                <h1 th:if="${isSelf}" class="text-center fs-3 mb-0">Динамика вашей спирометрии</h1>
-                <h1 th:if="${!isSelf}" class="text-center fs-3 mb-0">
-                    Динамика спирометрии пациента
-                    <span th:text="${patient.userInformation.fullName}" class="fw-bold">Петров Сергей Иванович</span>
-                </h1>
+            <div class="row text-center text-md-start mb-5">
+                <div class="col-12">
+                    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
+                        <div class="m-2 mx-4 m-md-0 mx-md-0">
+                            <h1 class="fs-5 mb-0">
+                                <span th:if="${isSelf}">Динамика вашей спирометрии</span>
+                                <span th:if="${!isSelf}">Динамика спирометрии</span>
+                            </h1>
+                            <h2 th:if="${!isSelf}" class="fs-6 mb-0">
+                                Пациент
+                                <span th:text="${patient.userInformation.fullName}" class="fw-bold">Иванов Степан Петрович</span>
+                            </h2>
+                        </div>
+                        <div class="m-1 mx-2 m-md-0 mx-md-0">
+                            <button class="btn btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#filter" aria-expanded="false" aria-controls="filter" id="filter-button">Период</button>
+                        </div>
+                    </div>
+                </div>
             </div>
             <!---->
-            <div class="row mb-5">
-                <div class="col-12 text-center">
-                    <canvas class="text-center" id="main"></canvas>
+            <div th:replace="~{/fragments/selection/periodization :: periodization}"></div>
+            <!---->
+            <div class="row mb-5" th:attr="data-patient=${patient.id}">
+                <div class="col-12">
+                    <canvas id="volumes"></canvas>
                 </div>
             </div>
             <!---->
             <div class="row">
-                <div class="col-12 text-center">
-                    <canvas class="text-center" id="tiffnoIndex"></canvas>
+                <div class="col-12">
+                    <canvas id="tiffnoIndex"></canvas>
                 </div>
             </div>
             <!---->
@@ -43,9 +57,10 @@
         <!---->
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
         <!---->
-        <script src="../../../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js" th:src="@{https://cdn.jsdelivr.net/npm/chart.js}"></script>
         <script src="../../../static/js/indicators/graphics/spirometry-graphic.js" th:src="@{/js/indicators/graphics/spirometry-graphic.js}"></script>
+        <script src="../../../static/js/selection/periodization.js" th:src="@{/js/selection/periodization.js}"></script>
+        <script src="../../../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
         <!---->
     </body>
 </html>
