Аналогично с предыдущими страницами исправил и дополнил страницу и js-файл графиков показателя "Вес". Начал правку страницы графика показателя "Т6МХ".

--- a/src/main/resources/templates/indicators/graphics/walk-test-graphic.html
+++ b/src/main/resources/templates/indicators/graphics/walk-test-graphic.html
@@ -27,16 +27,16 @@
                 </h1>
             </div>
             <!---->
-            <div class="row text-center mb-5">
-                <div class="col-12 col-lg-6 text-center">
+            <div class="row mb-5">
+                <div class="col-12 col-lg-6">
                     <h5 class="text-secondary fs-4 mb-3">До нагрузки</h5>
-                    <canvas class="text-center" id="oxygenPercentageBefore"></canvas>
-                    <canvas class="text-center" id="pulseRateBefore"></canvas>
+                    <canvas id="oxygenPercentageBefore"></canvas>
+                    <canvas id="pulseRateBefore"></canvas>
                 </div>
-                <div class="col-12 col-lg-6 text-center">
+                <div class="col-12 col-lg-6">
                     <h5 class="text-secondary fs-4 mb-3">После нагрузки</h5>
-                    <canvas class="text-center" id="oxygenPercentageAfter"></canvas>
-                    <canvas class="text-center" id="pulseRateAfter"></canvas>
+                    <canvas id="oxygenPercentageAfter"></canvas>
+                    <canvas id="pulseRateAfter"></canvas>
                 </div>
             </div>
             <!---->
