--- a/src/main/resources/templates/indicators/plain/overall-health-plain.html
+++ b/src/main/resources/templates/indicators/plain/overall-health-plain.html
@@ -6,11 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title th:if="${isSelf}" th:text="'Ваше общее самочувствие от ' + ${overallHealth.formattedDate}">Ваше общее самочувствие от 19-01-2020 14:34:41</title>
         <title th:if="${!isSelf}" th:text="'Общее самочувствие пациента &laquo;' + ${patient.userInformation.fullName} + '&raquo; от ' + ${overallHealth.formattedDate}">Общее самочувствие пациента "Иванов Степан Петрович" от 19-01-2020 14:34:41</title>
-        <link href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
-        <link href="../../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
-        <link rel="apple-touch-icon" sizes="180x180" href="../../static/favicon/apple-touch-icon.png" th:href="@{/favicon/apple-touch-icon.png}" />
-        <link rel="icon" type="image/png" sizes="32x32" href="../../static/favicon/favicon-32x32.png" th:href="@{/favicon/favicon-32x32.png}" />
-        <link rel="icon" type="image/png" sizes="16x16" href="../../static/favicon/favicon-16x16.png" th:href="@{/favicon/favicon-16x16.png}" />
+        <link href="../../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
+        <link href="../../../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
+        <link rel="apple-touch-icon" sizes="180x180" href="../../../static/favicon/apple-touch-icon.png" th:href="@{/favicon/apple-touch-icon.png}" />
+        <link rel="icon" type="image/png" sizes="32x32" href="../../../static/favicon/favicon-32x32.png" th:href="@{/favicon/favicon-32x32.png}" />
+        <link rel="icon" type="image/png" sizes="16x16" href="../../../static/favicon/favicon-16x16.png" th:href="@{/favicon/favicon-16x16.png}" />
     </head>
 
     <body class="min-vh-100 d-flex flex-column align-items-center justify-content-between bg-main">
@@ -19,20 +19,20 @@
         <!---->
         <div class="container text-secondary my-5">
             <!---->
-            <div class="row fs-5 mb-5">
+            <div class="row text-center mb-5">
                 <div class="col-12">
-                    <h1 class="text-center fs-3 mb-0">
-                        <span th:if="${isSelf}">
-                            Ваше общее самочувствие от
+                    <h1 class="fs-4 mb-0">
+                        <span th:if="${isSelf}">Ваше общее самочувствие</span>
+                        <span th:if="${!isSelf}">Общее самочувствие</span>
+                        <span>
+                            от
                             <span th:text="${overallHealth.formattedDate}">19-01-2020 14:34:41</span>
                         </span>
-                        <span th:if="${!isSelf}">
-                            Общее самочувствие пациента
-                            <span th:text="${patient.userInformation.fullName}" class="fw-bold">Иванов Степан Петрович</span>
-                            от
-                            <span th:text="${overallHealth.formattedDate}" class="fw-bold">19-01-2020 14:34:41</span>
-                        </span>
                     </h1>
+                    <h2 th:if="${!isSelf}" class="fs-5 mb-0">
+                        Пациент
+                        <span th:text="${patient.userInformation.fullName}" class="fw-bold">Иванов Степан Петрович</span>
+                    </h2>
                 </div>
             </div>
             <!---->
@@ -77,7 +77,7 @@
         <!---->
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
         <!---->
-        <script src="../../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
+        <script src="../../../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
         <!---->
     </body>
 </html>
