--- a/src/main/resources/templates/indicators/forms/pressure-form.html
+++ b/src/main/resources/templates/indicators/forms/pressure-form.html
@@ -18,20 +18,20 @@
         <!---->
         <div class="container text-secondary my-5">
             <!---->
-            <div class="row fs-5 mb-5">
+            <div class="row mb-5">
                 <div class="col-12">
                     <h1 class="text-center fs-3 mb-0">Давление</h1>
                 </div>
             </div>
             <!---->
-            <div class="row">
+            <div class="row fs-5">
                 <div class="col-12">
-                    <form action="#" method="post" id="pressure-form" class="fs-5">
-                        <div class="mb-5 col-12 col-md-6 col-lg-4">
+                    <form action="#" method="post" id="pressure-form">
+                        <div class="mb-5 col-12 col-md-8 col-lg-4">
                             <label for="upper" class="form-label fw-semibold fs-4">Верхнее (мм рт.ст.)</label>
                             <input type="number" name="upper" id="upper" class="form-control" placeholder="120" />
                         </div>
-                        <div class="mb-5 col-12 col-md-6 col-lg-4">
+                        <div class="mb-5 col-12 col-md-8 col-lg-4">
                             <label for="lower" class="form-label fw-semibold fs-4">Нижнее (мм рт.ст.)</label>
                             <input type="number" name="lower" id="lower" class="form-control" placeholder="80" />
                         </div>
