--- a/src/main/resources/templates/indicators/forms/walk-test-form.html
+++ b/src/main/resources/templates/indicators/forms/walk-test-form.html
@@ -18,7 +18,7 @@
         <!---->
         <div class="container text-secondary my-5">
             <!---->
-            <div class="row fs-5 mb-5">
+            <div class="row mb-5">
                 <div class="col-12">
                     <h1 class="text-center fs-3 mb-0">Т6МХ: общие данные</h1>
                 </div>
