--- a/src/main/resources/templates/indicators/forms/analysis-file-form.html
+++ b/src/main/resources/templates/indicators/forms/analysis-file-form.html
@@ -18,18 +18,18 @@
         <!---->
         <div class="container text-secondary my-5">
             <!---->
-            <div class="row fs-5 mb-5">
+            <div class="row mb-5">
                 <div class="col-12">
                     <h1 class="text-center fs-3 mb-0" th:text="${name}">Развёрнутый анализ крови</h1>
                 </div>
             </div>
             <!---->
-            <div class="row">
+            <div class="row fs-5">
                 <div class="col-12">
-                    <form action="#" method="post" id="file-form" name="file-form" class="fs-5">
+                    <form action="#" method="post" id="file-form" name="file-form">
                         <div class="d-flex flex-row mb-1">
                             <div class="flex-grow-1 me-1">
-                                <label for="file" class="form-label">Файл </label>
+                                <label for="file" class="form-label">Файл</label>
                                 <input type="file" name="file" id="file" class="form-control" />
                             </div>
                             <div class="mt-auto ms-1">
