--- a/src/main/resources/templates/indicators/forms/liquid-form.html
+++ b/src/main/resources/templates/indicators/forms/liquid-form.html
@@ -18,16 +18,16 @@
         <!---->
         <div class="container text-secondary my-5">
             <!---->
-            <div class="row fs-5 mb-5">
+            <div class="row mb-5">
                 <div class="col-12">
                     <h1 class="text-center fs-3 mb-0">Питьевой режим</h1>
                 </div>
             </div>
             <!---->
-            <div class="row">
+            <div class="row fs-5">
                 <div class="col-12">
-                    <form action="#" method="post" id="liquid-form" class="fs-5">
-                        <div class="mb-5 col-12 col-md-6 col-lg-4">
+                    <form action="#" method="post" id="liquid-form">
+                        <div class="col-12 col-md-8 col-lg-4 mb-5">
                             <label for="liquid" class="form-label fw-semibold fs-4">Количество жидкости в день (л)</label>
                             <input type="number" step="0.01" name="liquid" id="liquid" class="form-control" placeholder="3.5" />
                         </div>
