--- a/src/main/resources/templates/indicators/forms/physical-changes-form.html
+++ b/src/main/resources/templates/indicators/forms/physical-changes-form.html
@@ -18,15 +18,15 @@
         <!---->
         <div class="container text-secondary my-5">
             <!---->
-            <div class="row fs-5 mb-5">
+            <div class="row mb-5">
                 <div class="col-12">
                     <h1 class="text-center fs-3 mb-0">Физические изменения</h1>
                 </div>
             </div>
             <!---->
-            <div class="row">
+            <div class="row fs-5">
                 <div class="col-12">
-                    <form action="#" method="post" id="physical-changes-form" class="fs-5">
+                    <form action="#" method="post" id="physical-changes-form">
                         <div class="mb-5">
                             <h4 class="fs-4">Увеличение живота без переедания</h4>
                             <div class="form-check form-check-inline" th:each="each : ${trueFalse}">
