--- a/src/main/resources/templates/indicators/forms/pulse-oximetry-form.html
+++ b/src/main/resources/templates/indicators/forms/pulse-oximetry-form.html
@@ -18,20 +18,20 @@
         <!---->
         <div class="container text-secondary my-5">
             <!---->
-            <div class="row fs-5 mb-5">
+            <div class="row mb-5">
                 <div class="col-12">
                     <h1 class="text-center fs-3 mb-0">Пульсоксиметрия</h1>
                 </div>
             </div>
             <!---->
-            <div class="row">
+            <div class="row fs-5">
                 <div class="col-12">
-                    <form action="#" method="post" id="pulse-oximetry-form" class="fs-5">
-                        <div class="mb-5 col-12 col-md-6 col-lg-4">
+                    <form action="#" method="post" id="pulse-oximetry-form">
+                        <div class="mb-5 col-12 col-md-8 col-lg-4">
                             <label for="oxygenPercentage" class="form-label fw-semibold fs-4">Содержание кислорода в крови (%)</label>
                             <input type="number" step="0.01" name="oxygenPercentage" id="oxygenPercentage" class="form-control" placeholder="98.21" />
                         </div>
-                        <div class="mb-5 col-12 col-md-6 col-lg-4">
+                        <div class="mb-5 col-12 col-md-8 col-lg-4">
                             <label for="pulseRate" class="form-label fw-semibold fs-4">Пульс (уд/мин)</label>
                             <input type="number" name="pulseRate" id="pulseRate" class="form-control" placeholder="114" />
                         </div>
