--- a/src/main/resources/templates/indicators/forms/spirometry-form.html
+++ b/src/main/resources/templates/indicators/forms/spirometry-form.html
@@ -18,28 +18,28 @@
         <!---->
         <div class="container text-secondary my-5">
             <!---->
-            <div class="row fs-5 mb-5">
+            <div class="row mb-5">
                 <div class="col-12">
                     <h1 class="text-center fs-3 mb-0">Спирометрия</h1>
                 </div>
             </div>
             <!---->
-            <div class="row">
+            <div class="row fs-5">
                 <div class="col-12">
-                    <form action="#" method="post" id="spirometry-form" class="fs-5">
-                        <div class="mb-5 col-12 col-md-6 col-lg-4">
+                    <form action="#" method="post" id="spirometry-form">
+                        <div class="mb-5 col-12 col-md-8 col-lg-4">
                             <label for="vlc" class="form-label fw-semibold fs-4">ЖЕЛ (л)</label>
                             <input type="number" step="0.01" name="vlc" id="vlc" class="form-control" placeholder="6.53" />
                         </div>
-                        <div class="mb-5 col-12 col-md-6 col-lg-4">
+                        <div class="mb-5 col-12 col-md-8 col-lg-4">
                             <label for="avlc" class="form-label fw-semibold fs-4">ФЖЕЛ (л)</label>
                             <input type="number" step="0.01" name="avlc" id="avlc" class="form-control" placeholder="6.35" />
                         </div>
-                        <div class="mb-5 col-12 col-md-6 col-lg-4">
+                        <div class="mb-5 col-12 col-md-8 col-lg-4">
                             <label for="rlv" class="form-label fw-semibold fs-4">ООЛ (л)</label>
                             <input type="number" step="0.01" name="rlv" id="rlv" class="form-control" placeholder="2.79" />
                         </div>
-                        <div class="mb-5 col-12 col-md-6 col-lg-4">
+                        <div class="mb-5 col-12 col-md-8 col-lg-4">
                             <label for="vfe1" class="form-label fw-semibold fs-4">ОФВ1 (л)</label>
                             <input type="number" step="0.01" name="vfe1" id="vfe1" class="form-control" placeholder="4.63" />
                         </div>
