--- a/src/main/resources/templates/main_admin_contacts/contacts.html
+++ b/src/main/resources/templates/main_admin_contacts/contacts.html
@@ -20,7 +20,7 @@
             <!---->
             <div class="row mb-5">
                 <div class="col-12">
-                    <form id="contacts-form" action="#" th:action="@{/rest/contacts/save}" method="post" class="border rounded p-3">
+                    <form id="contacts-form" action="#" method="post" class="border rounded p-3">
                         <input style="display: none" name="id" />
                         <div class="d-flex flex-row flex-wrap align-items-center justify-content-center">
                             <div class="d-flex flex-row flex-wrap align-items-center justify-content-center flex-grow-1">
