В заголовках пользователей изменил "Сообщения" -> "Мессенджер". Поправил страницу генерации кодов администратором.

--- a/src/main/resources/templates/fragments/headers/patient-header.html
+++ b/src/main/resources/templates/fragments/headers/patient-header.html
@@ -38,7 +38,7 @@
                                 </li>
                                 <hr class="dropdown-divider" />
                                 <li>
-                                    <a class="dropdown-item" href="#" th:href="@{/messages}">Сообщения</a>
+                                    <a class="dropdown-item" href="#" th:href="@{/messages}">Мессенджер</a>
                                 </li>
                                 <hr class="dropdown-divider" />
                                 <li>
