--- a/src/main/resources/templates/code_gen/admin-code-gen.html
+++ b/src/main/resources/templates/code_gen/admin-code-gen.html
@@ -25,7 +25,7 @@
                         <hr />
                         <div class="mb-3">
                             <label for="name-code" class="form-label">Медицинское учреждение</label>
-                            <input type="text" name="name" id="name-code" class="form-control" disabled th:value="${admin.hospital.name}" />
+                            <input type="text" name="name" id="name-code" class="form-control" th:value="${admin.hospital.name}" disabled />
                         </div>
                         <div class="mb-3">
                             <label for="role-code" class="form-label">Роль</label>
