--- a/src/main/resources/templates/fragments/headers/doctor-header.html
+++ b/src/main/resources/templates/fragments/headers/doctor-header.html
@@ -35,7 +35,7 @@
                                 </li>
                                 <hr class="dropdown-divider" />
                                 <li>
-                                    <a class="dropdown-item" href="#" th:href="@{/messages}">Сообщения</a>
+                                    <a class="dropdown-item" href="#" th:href="@{/messages}">Мессенджер</a>
                                 </li>
                                 <hr class="dropdown-divider" />
                                 <li>
