--- a/src/main/resources/templates/patient_additions/anamnesis-form.html
+++ b/src/main/resources/templates/patient_additions/anamnesis-form.html
@@ -18,15 +18,15 @@
         <!---->
         <div class="container text-secondary my-5">
             <!---->
-            <div class="row fs-5 mb-5">
+            <div class="row mb-5">
                 <div class="col-12">
                     <h1 class="text-center fs-3 mb-0">Анамнез</h1>
                 </div>
             </div>
             <!---->
-            <div class="row">
+            <div class="row fs-5">
                 <div class="col-12">
-                    <form action="#" method="post" id="anamnesis-form" class="fs-5">
+                    <form action="#" method="post" id="anamnesis-form">
                         <div class="mb-5">
                             <h4 class="fs-4">Имеются ли у вас врождённые пороки сердца?</h4>
                             <div class="form-check form-check-inline" th:each="each : ${trueFalse}">
@@ -62,11 +62,11 @@
                                 <input th:id="'diabetes' + ${each}" type="radio" class="form-check-input" th:value="${each.value}" name="diabetes" />
                             </div>
                         </div>
-                        <div class="mb-5 col-12 col-md-6 col-lg-4">
+                        <div class="mb-5 col-12 col-md-8 col-lg-4">
                             <label for="height" class="form-label fw-semibold fs-4">Ваш рост (см)</label>
                             <input type="number" name="height" id="height" class="form-control" placeholder="177" />
                         </div>
-                        <div class="mb-5 col-12 col-md-6 col-lg-4">
+                        <div class="mb-5 col-12 col-md-8 col-lg-4">
                             <label for="weight" class="form-label fw-semibold fs-4">Ваш вес (кг)</label>
                             <input type="number" step="0.01" name="weight" id="weight" class="form-control" placeholder="64.9" />
                         </div>
