--- a/src/main/resources/templates/indicators/tables/weight-table.html
+++ b/src/main/resources/templates/indicators/tables/weight-table.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title th:if="${isSelf}">Динамика вашего веса</title>
-        <title th:if="${!isSelf}" th:text="'Динамика веса пациента &laquo;' + ${patient.userInformation.fullName} + '&raquo;'">ВеДинамика весас пациента "Иванов Степан Петрович"</title>
+        <title th:if="${!isSelf}" th:text="'Динамика веса пациента &laquo;' + ${patient.userInformation.fullName} + '&raquo;'">Динамика веса пациента "Иванов Степан Петрович"</title>
         <link href="../../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
         <link href="../../../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
         <link href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css" th:href="@{https://unpkg.com/gridjs/dist/theme/mermaid.min.css}" rel="stylesheet" />
