--- a/src/main/resources/templates/messages/dialogue.html
+++ b/src/main/resources/templates/messages/dialogue.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <!---->
-            <div class="row mb-5" style="max-height: 60vh; overflow-y: auto">
+            <div class="row messenger mb-5">
                 <div class="col-12" th:each="each, status : ${dialogue}" th:classappend="${!status.last} ? 'mb-2'">
                     <!--<div class="d-flex flex-row flex-wrap align-items-center justify-content-center justify-content-lg-between">
                         <div class="mx-3 mx-lg-0" th:text="${each.authorFullName}">Вы</div>
